--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1786,7 +1786,7 @@
 		}
 
 		h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
-			padding-bottom: 1em;
+			padding-bottom: 0.2em;
 			border-bottom: solid 2px rgba(255, 255, 255, 0.125);
 		}
 
@@ -3728,4 +3728,14 @@
 	margin: 0 auto;
 	border: 2px solid gray;
 	background-color: white;
+}
+
+.thumbnail:hover {
+    position:relative;
+    top:-25px;
+    left:-35px;
+    width:110%;
+    height:auto;
+    display:block;
+    z-index:999;
 }
